Fixed solution -> main row stille collapse too -> solved with margins

--- a/wine/static/wine/style.css
+++ b/wine/static/wine/style.css
@@ -110,3 +110,12 @@ details[open] {
 .hiddenRow {
     padding: 0 !important;
 }
+
+.wineDetail {
+margin-left: -50px;
+margin-top:50px;
+min-width: 300px;
+max-width: 800px;
+float: auto;
+z-index: 5;
+}
